2007-01-09 Braden McDaniel  <braden@endoframe.com>

	Added option to disable use of the Gecko runtime library directory
	-rpath flag when building openvrml-xembed.

	* README
	* configure.ac

2007-01-09 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.2 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* mozilla-plugin/configure.ac
	* src/Makefile.am: Updated libopenvrml libtool library version to
	8:2:0.

2008-01-08 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fixed Automake conditional test for WITH_REZ.

2008-01-08 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Apply Rez to sdl-viewer if "-framework" occurs in
	GL_LIBS.

2008-01-08 Braden McDaniel  <braden@endoframe.com>

	* lib/gtkglext/docs/reference/gtkglext/Makefile.am
	(GTKDOC_LIBS): Mac OS X 10.5 needs GL_LIBS here on account of the
	wonky flags that libtool won't track.

2008-01-08 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/player.cpp
	(openvrml_player_request_data_available(GIOChannel *,
	GIOCondition, gpointer)): Accept any supported Content-Encoding.

2008-01-08 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(uri::resolve_against(const uri &) const): Fixed crash in ".."
	path segment processing.

2008-01-07 Braden McDaniel  <braden@endoframe.com>

	Doc-comment fixes and improvements.

	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/browser.cpp

2007-01-06 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.1 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc