@@ -1,3 +1,11 @@
+2007-01-16 Braden McDaniel  <braden@endoframe.com>
+
+	* src/openvrml-xembed/main.cpp
+	(main(int, char *[])): Seed the
+	uninitialized_plugin_streambuf_map_ with the initial stream's
+	streambuf before starting the command channel loop thread in order
+	to avoid a race (and a potential crash).
+
 2007-01-09 Braden McDaniel  <braden@endoframe.com>
 
 	Added option to disable use of the Gecko runtime library directory
